--- a/AbstractFood/app/src/main/res/layout/activity_food.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_food.xml
@@ -64,6 +64,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:id="@+id/imageView4"
+        android:background="@null"
         android:src="@drawable/smileyf"
         android:layout_below="@+id/textView8"
         android:layout_alignParentStart="true" />
