--- a/AbstractFood/app/src/main/res/layout/activity_forgot_username_password.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_forgot_username_password.xml
@@ -12,8 +12,8 @@
     <EditText
         android:layout_width="3000dp"
         android:layout_height="wrap_content"
-        android:id="@+id/enterEmail"
-        android:hint="Enter Email Address"
+        android:id="@+id/enterUsername"
+        android:hint="User name"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="48dp" />
@@ -25,7 +25,7 @@
         android:clickable="true"
         android:id="@+id/sendEmail"
         android:layout_marginTop="54dp"
-        android:layout_below="@+id/enterEmail"
+        android:layout_below="@+id/enterUsername"
         android:layout_alignParentStart="true"
         style="@style/all_button_colors"/>
 </RelativeLayout>
