--- a/AbstractFood/app/src/main/res/layout/activity_profile.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_profile.xml
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:text="Change Password"
         android:textSize="15dp"
-
+        android:onClick="changePass"
         android:textColor="#1E88E5"
         android:id="@+id/ChangePsText"
 
