home gets data from discover now

--- a/AbstractFood/app/src/main/res/menu/menu.xml
+++ b/AbstractFood/app/src/main/res/menu/menu.xml
@@ -35,7 +35,8 @@
     <item android:title="add res"
           android:id="@+id/menu_add_recipe"
         />
-
+    <item android:title="Splat"
+          android:id="@+id/splat"/>
 
 
 </menu>
