--- a/AbstractFood/app/src/main/res/layout/activity_food.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_food.xml
@@ -22,7 +22,13 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true" />
 
-
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:id="@+id/aniImage"
+        android:src="@drawable/logo"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"/>
 
     <ImageView
         android:layout_width="50dp"
