--- a/AbstractFood/app/src/main/res/layout/activity_loading.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_loading.xml
@@ -17,14 +17,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/logo"
-        android:id="@+id/imageView"/>
+        android:id="@+id/logo_splat"/>
 
     <ProgressBar
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/progressBar"
-        android:layout_alignBottom="@+id/imageView"
+        android:layout_alignBottom="@+id/logo_splat"
         android:layout_centerHorizontal="true"
         android:indeterminate="false"/>
 
