--- a/AbstractFood/app/src/main/res/layout/activity_add_recipe.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_add_recipe.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,95 +10,14 @@
     android:orientation="vertical"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.food.abstractfood.AddRecipeActivity">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Step1:"
-        />
-    <EditText
+    <android.support.v4.view.ViewPager
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="75dp"
-        android:hint="list"
-        android:maxEms="100"
-        android:id="@+id/add_ingredent_et"
-        android:background="@drawable/background"
-        android:minHeight="100dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true">
 
-        />
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:weightSum="5"
-        >
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="75dp"
-            android:padding="@dimen/space_between"
-            android:background="@drawable/fake_button"
-
-            >
-        <ImageView
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:scaleX="1"
-            android:scaleY="1"
-            android:src="@drawable/plate"
-            android:cropToPadding="false"
-            android:contextClickable="false"
-            android:layout_below="@+id/mainimage_textview"
-            android:layout_alignParentStart="true"
-            android:layout_alignEnd="@+id/mainimage_textview"/>
+    </android.support.v4.view.ViewPager>
 
 
-        <TextView
-
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Add Image"
-            android:id="@+id/mainimage_textview"
-            android:layout_below="@id/mainimage_textview"
-
-            android:clickable="true"
-
-
-            />
-
-    </RelativeLayout>
-
-        <ImageView
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:layout_alignParentRight="true"
-            android:src="@drawable/paperclip"
-
-            />
-    </RelativeLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="3"
-        >
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Next Step"
-            android:id="@+id/add_next_bt"
-            android:layout_weight="1"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/add_finish_bt"
-            android:text="Finish"
-            android:layout_weight="1"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/add_cancel_bt"
-            android:text="Cancel"
-            android:layout_weight="1"/>
-    </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
