--- a/AbstractFood/app/src/main/res/layout/activity_foodlistviewz.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_foodlistviewz.xml
@@ -5,8 +5,7 @@
 
     <ListView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="390dp"
         android:id="@+id/Food_listView"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="1" />
+        android:layout_gravity="center_vertical" />
 </LinearLayout>
