--- a/AbstractFood/app/src/main/res/values/styles.xml
+++ b/AbstractFood/app/src/main/res/values/styles.xml
@@ -39,4 +39,15 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
+
+    <style name="MyOverflowButton" parent="Theme.AppCompat">
+        <item name="android:actionOverflowButtonStyle">@style/MyOverflowButton
+        </item>
+    </style>
+
+
+    <style name="MyOverflowButton." parent="android:style/Widget.Holo.Light.ActionButton.Overflow">
+        <item name="android:src">@mipmap/setbutton</item>
+    </style>
+
 </resources>
