Where to start... Ingredient finder works, Search by name works, some of the buttons in various pages are changed back to gray, the textboxes now start at the top, food is sent food successfully

--- a/AbstractFood/app/src/main/res/drawable/background.xml
+++ b/AbstractFood/app/src/main/res/drawable/background.xml
@@ -3,7 +3,7 @@
 <shape android:innerRadius="3dp"
        xmlns:android="http://schemas.android.com/apk/res/android">
 
-<solid android:color="#fff"/>
+<solid android:color="#ffffff"/>
 
     <corners android:bottomLeftRadius="@dimen/space_between"
              android:bottomRightRadius="@dimen/space_between"
