--- a/AbstractFood/app/src/main/res/layout/activity_foodlistviewz.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_foodlistviewz.xml
@@ -1,11 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:weightSum="1">
+
 
     <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="390dp"
-        android:id="@+id/Food_listView"
-        android:layout_gravity="center_vertical" />
+        android:layout_width="216dp"
+        android:layout_height="440dp"
+        android:layout_marginBottom="0dp"
+
+
+
+        android:id="@+id/foodresults" />
+
+    <Button
+        android:layout_width="143dp"
+        android:layout_height="wrap_content"
+        android:text="Back"
+        android:id="@+id/cancelif"
+        android:layout_gravity="bottom"
+        android:clickable="true"/>
+
+
 </LinearLayout>
