--- a/AbstractFood/app/src/main/res/layout/activity_report.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_report.xml
@@ -87,7 +87,7 @@
         android:text="Cancel"
         android:id="@+id/cancelBtn"
         android:layout_marginBottom="31dp"
-        style="@style/all_button_colors"
+
         android:layout_alignParentBottom="true"
         android:layout_alignStart="@+id/txtoutput" />
 
@@ -96,12 +96,12 @@
         android:layout_height="wrap_content"
         android:text="Submit"
         android:id="@+id/button7"
-        style="@style/all_button_colors"
+
         android:layout_alignTop="@+id/cancelBtn"
         android:layout_alignEnd="@+id/txtoutput" />
 
 
-    <MultiAutoCompleteTextView
+    <EditText
         android:layout_width="300dp"
         android:layout_height="150dp"
         android:text=" "
