home now accepts photos

--- a/AbstractFood/app/src/main/res/layout/activity_change_profile_picture.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_change_profile_picture.xml
@@ -25,6 +25,7 @@
         android:layout_gravity="center"
         android:id="@+id/username_text_view"
         android:textStyle="bold"
+        android:textAllCaps="true"
         android:textSize="25dp"></TextView>
 
 
