--- a/AbstractFood/app/src/main/res/layout/activity_homeactionbar.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_homeactionbar.xml
@@ -11,7 +11,8 @@
         android:text="Username"
         android:gravity="center"
         android:textStyle="bold"
-        android:textSize="20dp"
+        android:textSize="25dp"
+        android:textAllCaps="true"
         android:layout_gravity="center"
         android:layout_alignBottom="@+id/home_pic"
         android:layout_toEndOf="@+id/space"
