--- a/AbstractFood/app/src/main/res/layout/activity_foodlistviewz.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_foodlistviewz.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1">
@@ -8,11 +8,12 @@
     <ListView
         android:layout_width="216dp"
         android:layout_height="440dp"
-        android:layout_marginBottom="0dp"
 
 
-
-        android:id="@+id/foodresults" />
+        android:id="@+id/foodresults"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
 
     <Button
         android:layout_width="143dp"
@@ -20,7 +21,9 @@
         android:text="Back"
         android:id="@+id/cancelif"
         android:layout_gravity="bottom"
-        android:clickable="true"/>
+        android:clickable="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
 
-</LinearLayout>
+</RelativeLayout>
