--- a/AbstractFood/app/src/main/res/layout/activity_food.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_food.xml
@@ -33,6 +33,8 @@
     <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:background="@null"
+
         android:id="@+id/imageView3"
         android:src="@drawable/abstract_foods_default_pp"
         android:layout_centerVertical="true"
@@ -62,9 +64,11 @@
         android:text="Description"
         android:id="@+id/textView8"
         android:layout_below="@+id/imageView3"
-        android:layout_alignParentStart="true"
-        android:background="#FFF"
-        android:layout_alignEnd="@+id/button9" />
+        android:paddingTop="15dp"
+        android:paddingLeft="15dp"
+        android:layout_alignEnd="@+id/button9"
+        android:layout_toEndOf="@+id/imageView4"
+        android:layout_alignParentStart="true" />
 
     <ImageView
         android:layout_width="40dp"
