--- a/AbstractFood/app/src/main/res/layout/activity_login.xml
+++ b/AbstractFood/app/src/main/res/layout/activity_login.xml
@@ -29,10 +29,10 @@
         android:hint="Username"
         android:ems="10"
         android:id="@+id/editText"
+        android:layout_marginTop="135dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="73dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -83,6 +83,7 @@
         android:text="Don&apos;t have an account?"
         android:id="@+id/question"
         android:clickable="false"
+        android:paddingLeft="15dp"
         android:layout_marginTop="38dp"
         android:layout_below="@+id/button"
         android:layout_alignParentStart="true"
